[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/dummy.png" type="Texture" id=1]
[ext_resource path="res://scripts/dummy.gd" type="Script" id=2]
[ext_resource path="res://resources/scenes/explosion_particles.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[node name="dummy" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="explosion_particles" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="particles_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_dummy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_dummy_body_entered"]
[connection signal="timeout" from="particles_timer" to="." method="_on_particles_timer_timeout"]
